examples/test/testpolicy6315.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy6315
  namespace: namespace411
spec:
  podSelector:
    matchLabels:
      key3: value37
      key24: value1
      key5: value44
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key1: value8
          key45: value30
      podSelector:
        matchLabels:
          key26: value49
